aksSeries-1/part6/k8s/9-nginx-80-pod-secrets.yaml
---
# POD
# kubectl exec -it nginx -n titan -- /bin/sh
# kubectl port-forward pod/nginx 8081:80 -n titan # Browse to http://localhost:8081
# env | grep TITAN*
# cat /mnt/secrets/titan-password
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: titan
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
      protocol: TCP
    volumeMounts:
    - name: kv-secrets
      mountPath: "/mnt/secrets"
      readOnly: true
  volumes:
    - name: kv-secrets
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "spc-kv-prd-titan-230101"
---
